consigne 2 ex1 ok

--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -12,8 +12,9 @@
     <main>
         <button class="btn1">Nombre aléatoire</button>
         <p class='random'></p>
-        <input type="text">
-        <button class="btn2"></button>
+        <input type="text" class="input1">
+        <button class="btn2">Bonjour</button>
+        <p class="bjr"></p>
         <button class="btn3"></button>
         <button class="btn4"></button>
     </main>
