--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -9,14 +9,18 @@
     <title>Fonctions</title>
 </head>
 <body>
+
     <main>
         <button class="btn1">Nombre aléatoire</button>
         <p class='random'></p>
         <input type="text" class="input1">
-        <button class="btn2">Bonjour</button>
+        <button class="btn2">Bonjour bonjour!</button>
         <p class="bjr"></p>
-        <button class="btn3"></button>
-        <button class="btn4"></button>
+        <input type="text" class='input2'>
+        <button class="btn3">Calculer TVA</button>
+        <p class="tva"></p>
+        <input type="text" class="input3">
+        <button class="btn4">Manège</button>
     </main>
 
     <script src="app.js"></script>
