ajout fonction différente consigne 4

--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -21,6 +21,7 @@
         <p class="tva"></p>
         <input type="text" class="input3">
         <button class="btn4">Manège</button>
+        <p class="cm"></p>
     </main>
 
     <script src="app.js"></script>
