--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -11,17 +11,29 @@
 <body>
 
     <main>
-        <button class="btn1">Nombre aléatoire</button>
-        <p class='random'></p>
-        <input type="text" class="input1">
-        <button class="btn2">Bonjour bonjour!</button>
-        <p class="bjr"></p>
-        <input type="text" class='input2'>
-        <button class="btn3">Calculer TVA</button>
-        <p class="tva"></p>
-        <input type="text" class="input3">
-        <button class="btn4">Manège</button>
-        <p class="cm"></p>
+        <div>
+            <button class="btn1">Nombre aléatoire</button>
+            <p class='random'></p>
+            <hr>
+        </div>
+        
+        <div>
+            <input type="text" class="input1">
+            <button class="btn2">Bonjour bonjour!</button>
+            <p class="bjr"></p>
+            <hr>
+        </div>
+        <div>
+            <input type="text" class='input2'>
+            <button class="btn3">Calculer TVA</button>
+            <p class="tva"></p>
+            <hr>
+        </div>
+        <div>
+            <input type="text" class="input3">
+            <button class="btn4">Manège</button>
+            <p class="cm"></p>
+        </div>
     </main>
 
     <script src="app.js"></script>
