ajout des placeholders dans les inputs

--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -18,19 +18,19 @@
         </div>
         
         <div>
-            <input type="text" class="input1">
+            <input type="text" class="input1" placeholder="Nom">
             <button class="btn2">Bonjour bonjour!</button>
             <p class="bjr"></p>
             <hr>
         </div>
         <div>
-            <input type="text" class='input2'>
+            <input type="text" class='input2' placeholder="Prix">
             <button class="btn3">Calculer TVA</button>
             <p class="tva"></p>
             <hr>
         </div>
         <div>
-            <input type="text" class="input3">
+            <input type="text" class="input3" placeholder="Taille">
             <button class="btn4">Manège</button>
             <p class="cm"></p>
         </div>
