ajout des div pour affichage des listes

--- a/exercice2/index.html
+++ b/exercice2/index.html
@@ -9,8 +9,25 @@
     <title>Stockage</title>
 </head>
 <body>
-    <input type="text">
-    <button></button>
-    <button></button>
+    <main>
+
+        <section>
+            <article class="test">
+                <div>
+                    <input type="text" placeholder="Nom">
+                    <button class="btn1">Ajouter le nom</button>
+                </div>
+                <div class="pListe">
+
+                </div>
+            </article>
+            <article>
+                <button class="btn2">Choisir un nom</button>
+                <div class="pChoisir"></div>
+            </article>
+        </section>
+    
+    </main>
+    <script src="app.js"></script>
 </body>
 </html>
